fix body height bug where nav panel is not stretched to the bottom

--- a/src/styles.less
+++ b/src/styles.less
@@ -4,6 +4,12 @@ html, body {
     /*font-family: 'Roboto', 'Helvetica', sans-serif;*/
 }
 
+.monitorrent {
+    & > div {
+        min-height: 100%;
+    }
+}
+
 .md-sidenav-left md-content .md-button {
     text-align: left;
 }
